@@ -1,4 +1,9 @@
 0.08 2022-09-30
+  [New Features]
+   * Add the FIONBIO method to the Sys::Socket::Constant class.
+     
+     static method FIONBIO : int ();
+     
   [Bug Fix]
     * Fixed the bug that the SOMAXCONN method in the Sys::Socket::Constant class couldn't be called.
     * Fixed the bug that the getsockopt_int method in the Sys::Socket class doesn't work well.
